# apple-knowledge

./: .gitignore  .gitmodules  .mdlrc  .overcommit.yml  .rubocop.yml  .style.rb  404.html  4CC.md  AppleSRP.txt  BUILD.html  BUILD.md  CNAME  CREDITS.html  CREDITS.md  DEBUG.md  Dockerfile  EFI.md  FORMULA.md  Gemfile  Internet_Recovery.md  KDK.md  LICENSE  NOTES.html  NOTES.md  NVRAM.md  PNG.md  README.md  README_CONVERTED.html  README_CONVERTED.md  Rakefile  SECURITY.html  SECURITY.md  VirtualGarage.txt  _config.yml  _schema  boot-args.yaml  docker-compose.debug.yml  docker-compose.yml  hotel  index.html  (+4 more)
.data/: apns.json  apns.plist  apns.toml  apns.yaml  backup.json  backup.plist  baseband.json  baseband.plist  baseband.toml  baseband.yaml  bluetooth.json  bluetooth.plist  bluetooth.yaml  boot_args.json  boot_args.plist  boot_args.toml  boot_args.yaml  bridgeos.json  bridgeos.plist  bridgeos.toml  bundles.json  bundles.plist  certificates.json  certificates.plist  certificates.yaml  coprocessor.json  coprocessor.plist  coprocessor.toml  coprocessor.yaml  cores.json  cores.plist  cores.toml  cores.yaml  credits.json  credits.plist  debug.json  debug.plist  debug.toml  debug.yaml  defaults.json  (+120 more)
.generated/: irecovery.plist
.github/: labeler.yml
SEP/: memmap.md  (+1 more)
_packages/python/: .gitignore  README.md  build.py  pyproject.toml  setup.py  update_version.py
_packages/python/apple_data/: __init__.py
_packages/python/apple_data.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
_packages/python/src/apple_data/: __init__.py
_packages/python/tests/: test_smoke.py
(+1153 files in other folders)
