[build-system]
requires = ["poetry_core>=1.0.1", "PyYAML>=5",'setuptools>=38.6.0']
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "apple-data"
version = "1.0.0"
description = "Static data from https://docs.hackdiffe.rent"
readme = "README.md"

authors = ["Rick Mark <rickmark@outlook.com>"]
include = ['share/**/*']
build = "build.py"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
PyYAML = "^6.0"
